# state_estimation_ros

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  lint.bash  package.xml
include/state_estimation_ros/: msg_maps.h  ros_conversions.h  ros_conversions.hpp
src/: ros_conversions.cpp
test/: test_ros_conversions.cpp
